fix test.