@@ -33,6 +33,7 @@ tasks.withType<JavaExec> {
   jvmArgs("--add-opens", "java.base/java.util=ALL-UNNAMED")
   jvmArgs("--add-opens", "java.base/java.io=ALL-UNNAMED")
   jvmArgs("--add-opens", "java.base/sun.nio.ch=ALL-UNNAMED")
+  jvmArgs("--add-opens", "java.base/java.lang.reflect=ALL-UNNAMED")
   doFirst {
     // Printing the full command
     println("Executing command: ${executable} ${jvmArgs!!.joinToString(" ")} -cp ${classpath.asPath} ${mainClass.get()} ${args!!.joinToString(" ")}")
